feat: port 1.13.5 features over